Fix top alignement
Vertically aligned to the center header and
close button.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -25,6 +25,7 @@ body {
 
 .top {
   display: flex;
+  align-items: center;
 }
 
 .right {
@@ -50,8 +51,6 @@ body {
 }
 
 .header {
-  display: flex;
-  align-items: center;
   font-size: larger;
   font-weight: bold;
 }
